added all the validation for headers and added the exception handelling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=categoriesservice
+server.port=2025
+server.error.include-stacktrace=never
+server.error.include-message=never
