Added stored procedure integration using simple jdbc and springJdbc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,12 @@ spring.application.name=categoriesservice
 server.port=2025
 server.error.include-stacktrace=never
 server.error.include-message=never
+
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/scart?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
